deployments/kubernetes/23_deployment_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ynventory-frontend
  labels:
    app: ynventory-frontend
spec:
  selector:
    matchLabels:
      app: ynventory-frontend
  template:
    metadata:
      labels:
        app: ynventory-frontend
    spec:
      containers:
        - imagePullPolicy: Always
          name: container-0
          image: suterdev/ynventory.frontend
          ports:
          - name: http
            protocol: TCP
            containerPort: 80
      restartPolicy: Always
  replicas: 1
