deployments/kubernetes/30_service_backend.yml
apiVersion: v1
kind: Service
metadata:
  name: ynventory-backend-service
spec:
  selector:
    app: ynventory-backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
