deployments/kubernetes/30_service_db.yml
apiVersion: v1
kind: Service
metadata:
  name: ynventory-postgres-service
spec:
  selector:
    app: ynventory-postgres
  ports:
    - name: psql
      port: 5432
      protocol: TCP
      targetPort: psql
  sessionAffinity: None
  type: ClusterIP
