deployments/kubernetes/40_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ynventory-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ynventory.example.com
    http:
      paths:
      - backend:
          service:
            name: ynventory-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: ynventory-backend-service
            port:
              number: 80
        path: /api
        pathType: Prefix
